--- a/cloverbazar/public/stylesheets/productList.css
+++ b/cloverbazar/public/stylesheets/productList.css
@@ -42,32 +42,29 @@ img{
 
 }
 
-form.forms button{
-    margin: 10px 20px 20px 20px;
+main section article a.links{
+    margin: 5px 10px 10px 10px;
+    padding: 5px;
+    border: none;
+    border-radius: 5px;
+    width: 100px;
+    background-color: rgb(46, 46, 46);
+    color: #fbdcc4;
+    text-decoration: none;
+}
+
+main section article a.links:hover {
+    cursor: pointer;
+}
+
+form.forms button.nuevo-producto{
+    margin: 20px 20px 20px 20px;
     padding: 10px;
     border: none;
     border-radius: 5px;
     width: 150px;
     background-color: rgb(46, 46, 46);
     color: #fbdcc4;
-}
-
-form.forms button.botones{
-    margin: 5px 10px 10px 10px;
-    padding: 10px;
-    border: none;
-    border-radius: 5px;
-    width: 100px;
-    background-color: rgb(46, 46, 46);
-    color: #fbdcc4;
-}
-
-form.form button.botones:hover {
-    cursor: pointer;
-}
-
-form.forms button.nuevo-producto{
-    margin-top: 20px;
 }
 
 form.forms button.nuevo-producto:hover {
