--- a/cloverbazar/public/stylesheets/productAdd.css
+++ b/cloverbazar/public/stylesheets/productAdd.css
@@ -9,7 +9,7 @@ main{
     text-align: center;
 }
 
-form{
+form.forms{
     width: 90%;
     background-color: #fbdcc4;
     color: rgb(46, 46, 46);
@@ -19,12 +19,12 @@ form{
     margin: auto;
 }
 
-label{
+form.forms label{
     display: block;
     margin: 15px 0 15px 0;
 }
 
-input {
+form.forms input {
     margin: auto;
     padding: 10px;
     border: none;
@@ -32,11 +32,11 @@ input {
     border-radius: 5px;
 }
 
-.contenedor-botones{
+form.forms .contenedor-botones{
     text-align: center;
 }
 
-form button{
+form.forms button{
     margin-top: 20px;
     padding: 10px;
     border: none;
@@ -46,31 +46,31 @@ form button{
     color: #fff;
 }
 
-form button:last-child{
+form.forms button:last-child{
     background-color: #fbdcc4;
     color: rgb(46, 46, 46);
     text-decoration: underline;
 }
 
 @media(min-width:768px){
-    form{
+    form.forms{
         width: 672px;
     }
     
-    form button{
+    form.forms button{
         width: 130px;
     }
 
-    input{
+    form.forms input{
         width: 340px;
     }
 
-    .contenedor-datos{
+    form.forms .contenedor-datos{
         width: 372px;
         margin: auto;
     }
 
-    .contenedor-img{
+    form.forms .contenedor-img{
         width: 372px;
         margin: auto;
     }
