--- a/cloverbazar/views/products/productAdd.ejs
+++ b/cloverbazar/views/products/productAdd.ejs
@@ -4,22 +4,28 @@
 <main>
     <section>
         <h2>Agregar productos</h2>
-        <form action="/products/productAdd" method="POST" enctype="multipart/form-data">
+        <form action="/products/create" method="POST" enctype="multipart/form-data" class="forms">
             <div class="contenedor-datos">
                 <label for="nombreProducto">Nombre de Producto:</label>
                 <input type="text" name="nombreProducto" id="nombreProducto" placeholder="Nombre de producto">
+                <label for="precioProducto">Precio de Producto:</label>
+                <input type="text" name="precioProducto" id="precioProducto" placeholder="Precio de producto">
+                <label for="stockProducto">Stock de Producto:</label>
+                <input type="text" name="stockProducto" id="stockProducto" placeholder="Stock de producto">
+                <label for="descuentoProducto">Descuento de Producto:</label>
+                <input type="text" name="descuentoProducto" id="descuentoProducto" placeholder="Descuento de producto">
                 <label for="rubroProducto">Rubro:</label>
                 <input type="text" name="rubroProducto" id="rubroProducto" placeholder="Rubro">
                 <label for="colorProducto">Color:</label>
                 <input type="text" name="colorProducto" id="colorProducto" placeholder="Color">
                 <label for="medidasProducto">Medidas:</label>
                 <input type="text" name="medidasProducto" id="medidasProducto" placeholder="Medidas">
-                <label for="descripcionProducto">Descripcion:</label>
-                <input type="text" name="descripcionProducto" id="descripcionProducto" placeholder="Descripcion">
+                <label for="descripcionProducto">Descripción:</label>
+                <textarea name="descripcionProducto" id="descripcionProducto" cols="45" rows="10" placeholder="Descripción del producto"></textarea>
             </div>
             <div class="contenedor-img">
-                <label for="imgProducto">Imagen de Producto:</label>
-                <input type="file" name="imgProducto" id="imgProducto">
+                <label for="imagen">Imagen de Producto:</label>
+                <input type="file" name="imagen" id="imagen">
             </div>
             <div class="contenedor-botones">
                 <button type="submit">Agregar</button>
