--- a/cloverbazar/views/products/productDetail.ejs
+++ b/cloverbazar/views/products/productDetail.ejs
@@ -8,7 +8,7 @@
             <div>
                 <h1 class="nombreprod"> <%=product.nombre%></h1>
                 <h1 class="precioprod"> $ <%=product.precio%></h1>
-                <form action="/products/cart/<%=product.id%>" method="POST" class="agregar-al-carrito">
+                <form action="/products/cart/<%=product.id%>" method="GET" class="agregar-al-carrito">
                     <button type="submit">Agregar al carrito</button>
                 </form>
             </div>
