--- a/cloverbazar/views/products/product.ejs
+++ b/cloverbazar/views/products/product.ejs
@@ -1,19 +1,18 @@
 <link rel="stylesheet" href="/stylesheets/product.css">
 
-<%-include('../partials/header', {title: category})%>
+<%-include('../partials/header', {title: categoria.nombre})%>
 <main>
     <h2>Productos</h2>
     <section>
-        <%for(let i = 0 ; i < products.length ; i++) {
-                if(products[i].rubro == category) { %>
+        <%for(let i = 0 ; i < categoria.productos.length ; i++) { %>
         <article>
-            <a href="/products/detail/<%=products[i].id%>">
-                <img src="/images/products/<%=products[i].imagen%>" alt="">
-                <h3><%=products[i].nombre%> </h3>
-                <h3> $<%=products[i].precio%> </h3>
+            <a href="/products/detail/<%=categoria.productos[i].id%>">
+                <img src="/images/products/<%=categoria.productos[i].imagen%>" alt="">
+                <h3><%=categoria.productos[i].nombre%> </h3>
+                <h3> $<%=categoria.productos[i].precio%> </h3>
             </a>
         </article>
-        <% } } %>
+        <% } %>
     </section>
 </main>
 <%-include('../partials/footer')%>
