--- a/cloverbazar/views/products/productRubro.ejs
+++ b/cloverbazar/views/products/productRubro.ejs
@@ -8,7 +8,7 @@
         <article class="tarjeta-rubro">
             <a href="/products/rubro/<%=categorias[i].id%>">
                 <img src="/images/products/<%=categorias[i].imagen%>" alt="">
-                <h3><%=categorias[i].nombre%>></h3>
+                <h3><%=categorias[i].nombre%></h3>
             </a>
         </article>
         <% } %>
