--- a/cloverbazar/views/products/destacados.ejs
+++ b/cloverbazar/views/products/destacados.ejs
@@ -10,13 +10,13 @@
         <%for(let i = 0 ; i < productos.length ; i++) { %>
         <article>
             <a href="/products/detail/<%=productos[i].id%>">
-                <img src="/images/products/<%=productos[i].imagen%>" alt="">
+                <img src="/images/products/<%=productos[i].imagenes.ruta%>" alt="">
                 <h3><%=productos[i].nombre%> </h3>
                 <h3> $<%=productos[i].precio%> </h3>
             </a>
         </article>
         <% } %>
-        <% } %>
     </section>
+    <% } %>
 </main>
 <%-include('../partials/footer')%>
