--- a/cloverbazar/views/products/ofertas.ejs
+++ b/cloverbazar/views/products/ofertas.ejs
@@ -3,20 +3,19 @@
 <%-include('../partials/header', {title: 'Ofertas'})%>
 <main>
     <h2>Ofertas</h2>
-    <% if (ofertas.length == 0 ){ %>
+    <% if (productos.length == 0 ){ %>
         <h3>No hay ofertas nuevas disponibles</h3>
         <% } else {  %>
     <section>
-        <%for(let i = 0 ; i < ofertas.length ; i++) { %>
+        <%for(let i = 0 ; i < productos.length ; i++) { %>
         <article>
-            <a href="/products/detail/<%=ofertas[i].id%>">
-                <img src="/images/products/<%=ofertas[i].imagen%>" alt="">
-                <h3><%=ofertas[i].nombre%> </h3>
-                <h3> $<%=ofertas[i].precio%> </h3>
+            <a href="/products/detail/<%=productos[i].id%>">
+                <img src="/images/products/<%=productos[i].imagenes.ruta%>" alt="">
+                <h3><%=productos[i].nombre%> </h3>
+                <h3> $<%=productos[i].precio%> </h3>
             </a>
         </article>
-        <% } %>
-        <% } %>
+        <% } } %>
     </section>
 </main>
 <%-include('../partials/footer')%>
