--- a/cloverbazar/views/products/destacados.ejs
+++ b/cloverbazar/views/products/destacados.ejs
@@ -1,21 +1,22 @@
 <link rel="stylesheet" href="/stylesheets/product.css">
 
-<%-include('../partials/header', {title: 'Ofertas'})%>
+<%-include('../partials/header', {title: 'Destacados'})%>
 <main>
-    <h2>Ofertas</h2>
+    <h2>Productos destacados</h2>
     <% if (productos.length == 0 ){ %>
         <h3>No hay productos destacados</h3>
         <% } else {  %>
     <section>
         <%for(let i = 0 ; i < productos.length ; i++) { %>
+            <%for(let j=0 ; j < productos[i].imagenes.length ; j++) {%>
         <article>
             <a href="/products/detail/<%=productos[i].id%>">
-                <img src="/images/products/<%=productos[i].imagenes.ruta%>" alt="">
+                <img src="/images/products/<%=productos[i].imagenes[0].ruta%>" alt="">
                 <h3><%=productos[i].nombre%> </h3>
                 <h3> $<%=productos[i].precio%> </h3>
             </a>
         </article>
-        <% } %>
+        <% } } %>
     </section>
     <% } %>
 </main>
