--- a/cloverbazar/views/products/product.ejs
+++ b/cloverbazar/views/products/product.ejs
@@ -1,18 +1,19 @@
 <link rel="stylesheet" href="/stylesheets/product.css">
 
-<%-include('../partials/header', {title: categoria.nombre})%>
+<%-include('../partials/header', {title: 'categoria'})%>
 <main>
     <h2>Productos</h2>
     <section>
-        <%for(let i = 0 ; i < categoria.productos.length ; i++) { %>
+        <%for(let i = 0 ; i < productos.length ; i++) { %>
+            <%for(let j=0 ; j < productos[i].imagenes.length ; j++) {%>
         <article>
-            <a href="/products/detail/<%=categoria.productos[i].id%>">
-                <img src="/images/products/<%=categoria.productos[i].imagen%>" alt="">
-                <h3><%=categoria.productos[i].nombre%> </h3>
-                <h3> $<%=categoria.productos[i].precio%> </h3>
+            <a href="/products/detail/<%=productos[i].id%>">
+                <img src="/images/products/<%=productos[i].imagenes[0].ruta%>" alt="">
+                <h3><%=productos[i].nombre%> </h3>
+                <h3> $<%=productos[i].precio%> </h3>
             </a>
         </article>
-        <% } %>
+        <% } } %>
     </section>
 </main>
 <%-include('../partials/footer')%>
