--- a/cloverbazar/views/users/register.ejs
+++ b/cloverbazar/views/users/register.ejs
@@ -12,9 +12,12 @@
     <%}%>
     <form action="/users/register" method="POST" class="forms">
         <input type="text" name="nombre" placeholder="Nombre">
+        <input type="text" name="apellido" placeholder="Apellido">
         <input type="email" name="email" placeholder="E-mail">
         <input type="password" name="password" placeholder="Contraseña">
         <input type="password" name="confirmPassword" placeholder="Confirmar contraseña">
+        <input type="text" name="direccion" placeholder="Direccion">
+        <input type="text" name="telefono" placeholder="Telefono">
         <button type="submit">Registrate</button>
     </form>
 </main>
