--- a/cloverbazar/views/products/productDetail.ejs
+++ b/cloverbazar/views/products/productDetail.ejs
@@ -30,10 +30,11 @@
             if(product.categoria_id == productos[i].categoria_id && product.nombre != productos[i].nombre) { %>
         <a href="/products/detail/<%=productos[i].id%>">
             <article>
-                <%for(let j=0 ; j < productos[i].imagenes.length ; j++) {%>
+                <%if( productos[i].imagenes.length > 0) {%>
                 <img src="/images/products/<%=productos[i].imagenes[0].ruta%>" alt="">
-                <h4><span class="producto"> <%=productos[i].nombre%></span><span class="precio"> $<%=productos[i].precio%> </span></h4>
                 <% } %>
+                <h4><span class="producto"> <%=productos[i].nombre%></span><span class="precio"> $<%=productos[i].precio%> </span></h4>
+                
             </article>
         </a>
         <% } } %>
