--- a/cloverbazar/views/products/productEdit.ejs
+++ b/cloverbazar/views/products/productEdit.ejs
@@ -4,7 +4,7 @@
 <main>
     <section>
         <h2>Editar producto: <%= product.nombre%></h2>
-        <form action="/products/edit/<%= product.id%>" method="POST" class="forms">
+        <form action="/products/edit/<%= product.id%>" method="POST" class="forms" enctype="multipart/form-data">
             <div class="contenedor-datos">
                 <label for="nombreProducto">Nombre de Producto:</label>
                 <input type="text" name="nombreProducto" id="nombreProducto" value= '<%=product.nombre %>' >
@@ -37,7 +37,7 @@
             <div class="contenedor-img">
                 <label for="imagen">Imagen de Producto:</label>
                 <%if( product.imagenes.length > 0) {%>
-                <input type="file" name="imagen" id="imagen" value="<%=product.imagenes[0].ruta%>">
+                <input type="file" name="imagen" id="imagen" value="/images/products/<%=product.imagenes[0].ruta%>">
                 <% } %>
             </div>
             <div class="contenedor-botones">
