--- a/cloverbazar/views/users/register.ejs
+++ b/cloverbazar/views/users/register.ejs
@@ -6,10 +6,13 @@
     <% if (typeof errors != "undefined"){ %>
         <ul style="padding: 0;">
             <% for (var i= 0; i< errors.length ; i++) { %>
-                <li style="list-style: none"> <%= errors[i].msg %> </li>
+                <li style="list-style: none; color:red"> <%= errors[i].msg %> </li>
             <%}%>
         </ul>
     <%}%>
+    <% if(typeof errorAlLoguear != "undefined"){ %>
+        <p style="color:red"><%= errorAlLoguear %></p>
+    <% } %>
     <form action="/users/register" method="POST" class="forms">
         <input type="text" name="nombre" placeholder="Nombre">
         <input type="text" name="apellido" placeholder="Apellido">
