--- a/cloverbazar/views/partials/header.ejs
+++ b/cloverbazar/views/partials/header.ejs
@@ -20,11 +20,19 @@
                     <i class="fas fa-shopping-cart"></i>
                 </div>
             </a>
+            <%if(typeof usuario == "undefined"){%>
             <a href="/users/login">
                 <div class="loginButton">
                     <button>Log In</button>
                 </div>
             </a>
+            <%} else {%>
+                <a href="/users/login">
+                    <div class="loginButton">
+                        <button><%=usuario.nombre%></button>
+                    </div>
+                </a>
+            <% } %>
         </div>
         <div class="barra2">
             <a href="/">
