--- a/cloverbazar/public/stylesheets/cambios.css
+++ b/cloverbazar/public/stylesheets/cambios.css
@@ -7,10 +7,6 @@ section{
     text-align: center;
     border-radius: 20px;
     background-color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
 }
 
 h2 {
@@ -43,11 +39,15 @@ img{
 }
 
 main form input {
-    width: 40px;
-    margin-right: 20px;
+    text-align: center;
+    margin: 20px 20px 10px 20px;
+    padding: 10px;
+    border: none;
+    width: 50px;
+    border-radius: 5px;
 }
 
-form.forms button.nuevo-producto{
+button.nuevo-producto{
     margin: 20px 20px 20px 20px;
     padding: 10px;
     border: none;
@@ -57,7 +57,7 @@ form.forms button.nuevo-producto{
     color: #fbdcc4;
 }
 
-form.forms button.nuevo-producto:hover {
+button.nuevo-producto:hover {
     cursor: pointer;
 }
 
