--- a/cloverbazar/views/products/cambios.ejs
+++ b/cloverbazar/views/products/cambios.ejs
@@ -4,23 +4,24 @@
 <main>
     <h2>Listado de productos</h2>
     <section>
+        <form action="/products/cambios" method="POST">
         <%for(let i=0 ; i < productos.length ; i++) {%>
-
         <article>
             <%if( productos[i].imagenes.length > 0) {%>
             <img src="/images/products/<%=productos[i].imagenes[0].ruta%>" alt="Imagen de producto">
             <% } %>
             <p class="nombre-producto"><%=productos[i].nombre%></p>
-            <form action="/products/cambios" method="POST">
-                <label for="stockProducto">Stock:</label>
-                <input type="text" name="stockProducto" id="stockProducto" value= '<%=productos[i].stock %>'>
-                <label for="descuentoProducto">Descuento:</label>
-                <input type="text" name="descuentoProducto" id="descuentoProducto" value= '<%=productos[i].descuento %>'>
-            </form>
+            <div>
+            <label for="stockProducto">Stock:</label>
+            <input type="text" name="stockProducto" id="stockProducto" value= '<%=productos[i].stock %>'>
+            </div>
+            <div>
+            <label for="descuentoProducto">Descuento:</label>
+            <input type="text" name="descuentoProducto" id="descuentoProducto" value= '<%=productos[i].descuento %>'>
+            </div>
         </article>
         <%  } %>
-        <form action="/products/cambios" method="POST" class="forms">
-            <button type="submit" class="nuevo-producto">MODIFICAR</button>
+        <button type="submit" class="nuevo-producto">MODIFICAR</button>
         </form>
     </section>
 </main>
