--- a/cloverbazar/views/products/productList.ejs
+++ b/cloverbazar/views/products/productList.ejs
@@ -20,6 +20,9 @@
         <form action="/products/create" class="forms">
             <button type="submit" class="nuevo-producto">NUEVO PRODUCTO</button>
         </form>
+        <form action="/products/cambios" class="forms">
+            <button type="submit" class="nuevo-producto">MODIFICACIONES</button>
+        </form>
     </section>
 </main>
 <%-include('../partials/footer')%>
