Cookies para login, no funciona rememberMiddleware

--- a/cloverbazar/views/partials/header.ejs
+++ b/cloverbazar/views/partials/header.ejs
@@ -28,7 +28,7 @@
             <%} else {%>
                 <a href="/users/perfil/id">
                     <div class="loginButton">
-                        <button>hola <%=locals.usuarioLogueado.nombre%></button>
+                        <button>Hola <%=locals.usuarioLogueado.nombre%></button>
                     </div>
                 </a>
                 <a href="/users/destroySession">
