--- a/cloverbazar/views/users/login.ejs
+++ b/cloverbazar/views/users/login.ejs
@@ -13,6 +13,8 @@
     <form action="/users/login" method="POST" class="forms form-login">
         <input type="email" name="email" placeholder="E-mail">
         <input type="password" name="password" placeholder="Contraseña">
+        <label for="remember">Recordame</label>
+        <input type="checkbox" name="remember" id="remember">
         <a href="/users/register">No tenes cuenta? Registrate</a>
         <button type="submit">Iniciar sesión</button>
     </form>
