--- a/cloverbazar/views/partials/header.ejs
+++ b/cloverbazar/views/partials/header.ejs
@@ -26,7 +26,7 @@
                 </div>
             </a>
             <%} else {%>
-                <a href="/users/perfil/id">
+                <a href="/users/perfil/<%=locals.usuarioLogueado.id%>">
                     <div class="loginButton">
                         <button>Hola <%=locals.usuarioLogueado.nombre%></button>
                     </div>
