--- a/cloverbazar/views/index.ejs
+++ b/cloverbazar/views/index.ejs
@@ -5,7 +5,7 @@
   <main>
     <section class="carrusel">
       <a href="">
-        <img src="/images/imagentipo.png" alt="">
+        <img src="/images/portada.png" alt="">
         <h1>-Tu bazar online-</h1>
       </a>
     </section>
