--- a/cloverbazar/views/carts/productCart.ejs
+++ b/cloverbazar/views/carts/productCart.ejs
@@ -2,40 +2,33 @@
 
 <%-include('../partials/header', {title: 'Carrito'})%>
 <main>
+    <%if(carrito_producto.length > 0){%>
     <h2>Tu Compra</h2>
-    <form action="/products/cart>" method="POST" class="forms formulario-carrito">
-        <%for(let i=0 ; i < items.length ; i++){
-            for(let j=0 ; j < productos.length ; j++){%>
+    <form action="/carts/comprar/<%=carrito_producto[0].carrito_id%>" method="POST" class="forms formulario-carrito">
+            <% let total = 0 
+            for(let i=0 ; i < carrito_producto.length ; i++){%>
         <article>
-            <img src="/images/imagentipo.png" alt="Imagen de producto seleccionado">
-            <p><%=items[i].productos[j].nombre%>></p>
-            <p>Cant</p>
-            <p>$$$</p>
+            <img src="/images/products/<%=carrito_producto[i].imagenes[0].ruta%>" alt="Imagen de producto seleccionado">
+            <p><%=carrito_producto[i].productos.nombre%></p>
+            <p><%=carrito_producto[i].cantidad%> </p>
+            <p>$ <%=(carrito_producto[i].productos.precio)*(1-(carrito_producto[i].productos.descuento)/100)%></p>
+            <input type="hidden" name="id" value="<%=carrito_producto[i].id%>">
+            <input type="hidden" name="precio" value="<%=(carrito_producto[i].productos.precio)*(1-(carrito_producto[i].productos.descuento)/100)%>">
+            <a href="/carts/eliminar/<%=carrito_producto[0].carrito_id%>/<%=carrito_producto[i].producto_id%>" style="position: relative; bottom: 55px; text-decoration: none;">X</a>
         </article>
-        <article>
-            <img src="/images/imagentipo.png" alt="Imagen de producto seleccionado">
-            <p>Nombre</p>
-            <p>Cant</p>
-            <p>$$$</p>
-        </article>
-        <article>
-            <img src="/images/imagentipo.png" alt="Imagen de producto seleccionado">
-            <p>Nombre</p>
-            <p>Cant</p>
-            <p>$$$</p>
-        </article>
-        <article>
-            <img src="/images/imagentipo.png" alt="Imagen de producto seleccionado">
-            <p>Nombre</p>
-            <p>Cant</p>
-            <p>$$$</p>
-        </article>
+            <% total = total + (carrito_producto[i].productos.precio)*(1-(carrito_producto[i].productos.descuento)/100)*carrito_producto[i].cantidad%>
+            <% } %>
+        
         <article class="total-compra">
             <p>Total</p>
-            <p>$$$</p>
+            <p>$<%=total%> </p>
         </article>
         <button type="submit" class="confirmar-compra">Confirmar compra</button>
-        <a href="/product">Seguir comprando</a>
+        <a href="/products/rubro">Seguir comprando</a>
     </form>
+    <% } else { %>
+        <h2>No hay productos para mostrar</h2>
+        <a href="/products/rubro">Seguir comprando</a>
+    <% } %>
 </main>
 <%-include('../partials/footer')%>
