--- a/cloverbazar/views/products/productEdit.ejs
+++ b/cloverbazar/views/products/productEdit.ejs
@@ -31,6 +31,12 @@
                 <input type="text" name="colorProducto" id="colorProducto" value='<%=product.color %>' >
                 <label for="medidasProducto">Medidas:</label>
                 <input type="text" name="medidasProducto" id="medidasProducto" value='<%=product.medidas %>' >
+                <label for="estadoProducto">Estado:</label>
+                <select name="estadoProducto">
+                    <option value="">Seleccione una opcion</option>
+                    <option value="1">Activo</option>
+                    <option value="0">Inactivo</option>
+                </select>
                 <label for="descripcionProducto">Descripcion:</label>
                 <textarea name="descripcionProducto" id="descripcionProducto" cols="45" rows="10"><%=product.descripcion%></textarea>
             </div>
