--- a/cloverbazar/views/users/perfil.ejs
+++ b/cloverbazar/views/users/perfil.ejs
@@ -23,13 +23,7 @@
             <input type="text" name="telefono" placeholder="Teléfono" value="<%=usuario.telefono%>">
             <button type="submit">Guardar cambios</button>
         </form>
-        <form action="/users/password/<%=usuario.id%>" method="POST" class="forms">
-            <h3>Cambiar contraseña</h3>
-            <input type="password" name="password" placeholder="Contraseña anterior">
-            <input type="password" name="passwordNew" placeholder="Contraseña nueva">
-            <input type="password" name="confirmPasswordNew" placeholder="Confirmar contraseña nueva">
-            <button type="submit">Guardar cambios</button>
-        </form>
+        <a href="/users/password/<%=usuario.id%>"> <h3>Cambiar contraseña</h3> </a>
 </div> 
 </main>
 <%-include('../partials/footer')%>
